--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                 <li class="name-app-container">
                 <div class="img-app-list">
                     <img src="./images/1.jpg" width="360" alt="Banking App" />
-                    <p class="all-apps-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                    <p class="apps-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
                     Cloud Storage App</p>
                 </div>
                     <div class="name-type-app">
@@ -345,7 +345,7 @@
         <p class="description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </div>
     <div class="social-media-container">
-            <p class="social-media-p">Social media</p>
+            <p class="social-media-paragraph">Social media</p>
             <ul class="list-of-sm">
                 <li class="sm-list-footer">
                     <a class="footer-social-item-link" target="_blank" href="https://www.instagram.com/">
