--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                 <li class="name-app-container">
                 <div class="img-app-list">
                     <img src="./images/2.jpg" width="360" alt="Cashless Payment" />
-                    <p class="all-apps-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                    <p class="apps-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
                     Cloud Storage App</p>
                 </div>
                     <div class="name-type-app">
@@ -289,7 +289,7 @@
                 <li class="name-app-container">
                     <div class="img-app-list">
                     <img src="./images/3.jpg" width="360" alt="Meditation App" />
-                    <p class="all-apps-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                    <p class="apps-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
                         App · Exotic Fruit Ecommerce App ·
                         Cloud Storage App</p>
                     </div>
@@ -301,7 +301,7 @@
                 <li class="name-app-container">
                     <div class="img-app-list">
                     <img src="./images/4.jpg" width="360" alt="Taxi Service" />
-                    <p class="all-apps-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                    <p class="apps-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
                         App · Exotic Fruit Ecommerce App ·
                         Cloud Storage App</p>
                     </div>
@@ -313,7 +313,7 @@
                 <li class="name-app-container">
                     <div class="img-app-list">
                     <img src="./images/5.jpg" width="360" alt="Screen Illustrations" />
-                    <p class="all-apps-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                    <p class="apps-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
                         App · Exotic Fruit Ecommerce App ·
                         Cloud Storage App</p>
                     </div>
@@ -325,7 +325,7 @@
                 <li class="name-app-container">
                     <div class="img-app-list">
                     <img src="./images/6.jpg" width="360" alt="Online Courses" />
-                    <p class="all-apps-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                    <p class="apps-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
                         App · Exotic Fruit Ecommerce App ·
                         Cloud Storage App</p>
                     </div>
