--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a class="header-main-logo" href="./index.html">Web<span class="definition-of-company">Studio</span></a>
             <ul class="section-of-contacts">
                 <li class="list-of-definitions">
-                    <a href="./index.html" class="current">Studio</a>
+                    <a href="./index.html" class="link-of-definitions current">Studio</a>
                 </li>
                 <li class="list-of-definitions">
                     <a href="" class="link-of-definitions">Portfolio</a>
@@ -126,7 +126,7 @@
                         <li class="sm-item-list">
                             <a class="sm-item-link" target="_blank" href="https://facebook.com/">
                                 <svg class="icons-footer-social" width="16" height="16">
-                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                    <use href="./images/icons.svg#icon-facebook-1"></use>
                                 </svg>
                             </a>
                         </li>
@@ -163,7 +163,7 @@
                                             <li class="sm-item-list">
                                                 <a class="sm-item-link" target="_blank" href="https://facebook.com/">
                                                     <svg class="icons-footer-social" width="16" height="16">
-                                                        <use href="./images/icons.svg#icon-facebook"></use>
+                                                        <use href="./images/icons.svg#icon-facebook-1"></use>
                                                     </svg>
                                                 </a>
                                             </li>
@@ -200,7 +200,7 @@
                                             <li class="sm-item-list">
                                                 <a class="sm-item-link" target="_blank" href="https://facebook.com/">
                                                     <svg class="icons-footer-social" width="16" height="16">
-                                                        <use href="./images/icons.svg#icon-facebook"></use>
+                                                        <use href="./images/icons.svg#icon-facebook-1"></use>
                                                     </svg>
                                                 </a>
                                             </li>
