--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <li class="list-benefits-item">
                     <div class="image-of-benefits">
                         <svg class="feature-icon" width="64" height="64">
-                            <use href="./images/icons.svg#icon-astronaut-1"></use>
+                            <use href="./images/icons.svg#icon-clock-1"></use>
                         </svg>
                     </div>
                     <h3 class="head-of-benefits">Punctuality</h3>
@@ -77,7 +77,7 @@
                 <li class="list-benefits-item">
                     <div class="image-of-benefits">
                         <svg class="feature-icon" width="64" height="64">
-                            <use href="./images/icons.svg#icon-clock-1"></use>
+                            <use href="./images/icons.svg#icon-diagram-1"></use>
                         </svg>
                     </div>
                     <h3 class="head-of-benefits">Diligence</h3>
@@ -87,7 +87,7 @@
                 <li class="list-benefits-item">
                     <div class="image-of-benefits">
                         <svg class="feature-icon" width="64" height="64">
-                            <use href="./images/icons.svg#icon-diagram-1"></use>
+                            <use href="./images/icons.svg#icon-astronaut-1"></use>
                         </svg>
                     </div>
                     <h3 class="head-of-benefits">Technologies</h3>
@@ -112,14 +112,14 @@
                         <li class="sm-item-list">
                             <a class="sm-item-link" target="_blank" href="https://www.instagram.com/">
                                 <svg class="icons-footer-social" width="16" height="16">
-                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                    <use href="./images/icons.svg#icon-instagram-2"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="sm-item-list">
                             <a class="sm-item-link" target="_blank" href="https://x.com/home?lang=en">
                                 <svg class="icons-footer-social" width="16" height="16">
-                                    <use href="./images/icons.svg#witter"></use>
+                                    <use href="./images/icons.svg#icon-twitter-1"></use>
                                 </svg>
                             </a>
                         </li>
@@ -133,7 +133,7 @@
                         <li class="sm-item-list">
                             <a class="sm-item-link" target="_blank" href="https://linkedin.com/">
                                 <svg class="icons-footer-social" width="16" height="16">
-                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                    <use href="./images/icons.svg#icon-linkedin-1"></use>
                                 </svg>
                             </a>
                         </li>
@@ -149,14 +149,14 @@
                                             <li class="sm-item-list">
                                                 <a class="sm-item-link" target="_blank" href="https://www.instagram.com/">
                                                     <svg class="icons-footer-social" width="16" height="16">
-                                                        <use href="./images/icons.svg#icon-instagram"></use>
+                                                        <use href="./images/icons.svg#icon-instagram-2"></use>
                                                     </svg>
                                                 </a>
                                             </li>
                                             <li class="sm-item-list">
                                                 <a class="sm-item-link" target="_blank" href="https://x.com/home?lang=en">
                                                     <svg class="icons-footer-social" width="16" height="16">
-                                                        <use href="./images/icons.svg#witter"></use>
+                                                        <use href="./images/icons.svg#icon-twitter-1"></use>
                                                     </svg>
                                                 </a>
                                             </li>
@@ -170,7 +170,7 @@
                                             <li class="sm-item-list">
                                                 <a class="sm-item-link" target="_blank" href="https://linkedin.com/">
                                                     <svg class="icons-footer-social" width="16" height="16">
-                                                        <use href="./images/icons.svg#icon-linkedin"></use>
+                                                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                                                     </svg>
                                                 </a>
                                             </li>
@@ -186,14 +186,14 @@
                                             <li class="sm-item-list">
                                                 <a class="sm-item-link" target="_blank" href="https://www.instagram.com/">
                                                     <svg class="icons-footer-social" width="16" height="16">
-                                                        <use href="./images/icons.svg#icon-instagram"></use>
+                                                        <use href="./images/icons.svg#icon-instagram-2"></use>
                                                     </svg>
                                                 </a>
                                             </li>
                                             <li class="sm-item-list">
                                                 <a class="sm-item-link" target="_blank" href="https://x.com/home?lang=en">
                                                     <svg class="icons-footer-social" width="16" height="16">
-                                                        <use href="./images/icons.svg#witter"></use>
+                                                        <use href="./images/icons.svg#icon-twitter-1"></use>
                                                     </svg>
                                                 </a>
                                             </li>
@@ -207,7 +207,7 @@
                                             <li class="sm-item-list">
                                                 <a class="sm-item-link" target="_blank" href="https://linkedin.com/">
                                                     <svg class="icons-footer-social" width="16" height="16">
-                                                        <use href="./images/icons.svg#icon-linkedin"></use>
+                                                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                                                     </svg>
                                                 </a>
                                             </li>
@@ -223,28 +223,28 @@
                                             <li class="sm-item-list">
                                                 <a class="sm-item-link" target="_blank" href="https://www.instagram.com/">
                                                     <svg class="icons-footer-social" width="16" height="16">
-                                                        <use href="./images/icons.svg#icon-instagram"></use>
+                                                        <use href="./images/icons.svg#icon-instagram-2"></use>
                                                     </svg>
                                                 </a>
                                             </li>
                                             <li class="sm-item-list">
                                                 <a class="sm-item-link" target="_blank" href="https://x.com/home?lang=en">
                                                     <svg class="icons-footer-social" width="16" height="16">
-                                                        <use href="./images/icons.svg#witter"></use>
+                                                        <use href="./images/icons.svg#icon-twitter-1"></use>
                                                     </svg>
                                                 </a>
                                             </li>
                                             <li class="sm-item-list">
                                                 <a class="sm-item-link" target="_blank" href="https://facebook.com/">
                                                     <svg class="icons-footer-social" width="16" height="16">
-                                                        <use href="./images/icons.svg#icon-facebook"></use>
+                                                        <use href="./images/icons.svg#icon-facebook-1"></use>
                                                     </svg>
                                                 </a>
                                             </li>
                                             <li class="sm-item-list">
                                                 <a class="sm-item-link" target="_blank" href="https://linkedin.com/">
                                                     <svg class="icons-footer-social" width="16" height="16">
-                                                        <use href="./images/icons.svg#icon-linkedin"></use>
+                                                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                                                     </svg>
                                                 </a>
                                             </li>
@@ -344,28 +344,28 @@
                 <li class="sm-list-footer">
                     <a class="footer-social-item-link" target="_blank" href="https://www.instagram.com/">
                     <svg class="icons-footer-social" width="24" height="24">
-                        <use href="./images/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                     </svg>
                     </a>
                 </li>
                 <li class="sm-list-footer">
                 <a class="footer-social-item-link" target="_blank" href="https://x.com/home?lang=en">
                     <svg class="icons-footer-social" width="24" height="24">
-                        <use href="./images/icons.svg#witter"></use>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                     </svg>
                 </a>
                 </li>
                 <li class="sm-list-footer">
                     <a class="footer-social-item-link" target="_blank" href="https://www.facebook.com/">
                         <svg class="icons-footer-social" width="24" height="24">
-                            <use href="./images/icons.svg#icon-facebook"></use>
+                            <use href="./images/icons.svg#icon-facebook-1"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="sm-list-footer">
                     <a class="footer-social-item-link" target="_blank" href="https://www.linkedin.com/">
                         <svg class="icons-footer-social" width="24" height="24">
-                            <use href="./images/icons.svg#icon-linkedin"></use>
+                            <use href="./images/icons.svg#icon-linkedin-1"></use>
                         </svg>
                     </a>
                 </li>
