--- a/index.html
+++ b/index.html
@@ -393,10 +393,8 @@
                     <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
                 </svg>
             </button>
-        </div>
-        <p class="mod-paragraph">
-            
-        </p>
+        
+        <p class="mod-paragraph">Leave your contacts and we will call you back</p>
         <form>
             <div class="form-div">
                 <label class="label-form" for="user-name">Name</label>
@@ -405,6 +403,7 @@
                 </div>
             </div>
         </form>
+    </div>
     </div>
 </body>
 
