--- a/index.html
+++ b/index.html
@@ -397,9 +397,14 @@
         <p class="mod-paragraph">Leave your contacts and we will call you back</p>
         <form>
             <div class="form-div">
-                <label class="label-form" for="user-name">Name</label>
+                <label class="label-form" for="user-name">Name
+
+                </label>
                 <div class="for-input-icons">
-                    <input id="user-name" name="user-name" type="text" class="input-form">
+                    <input id="user-name" name="user-name" type="text" class="input-form" required>
+                    <svg class="person-icon" width="18" height="24">
+                    <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
+                    </svg>
                 </div>
             </div>
         </form>
