--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
             
                 </label>
                 <div class="for-input-icons">
-                    <input id="user-name" name="user-name" type="text" class="input-form" required>
+                    <input id="user-phone" name="user-phone" type="text" class="input-form" required>
                     <svg class="person-icon" width="18" height="24">
                         <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
                     </svg>
@@ -423,7 +423,7 @@
             
                 </label>
                 <div class="for-input-icons">
-                    <input id="user-name" name="user-name" type="text" class="input-form" required>
+                    <input id="user-email" name="user-email" type="text" class="input-form" required>
                     <svg class="person-icon" width="18" height="24">
                         <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
                     </svg>
