--- a/index.html
+++ b/index.html
@@ -429,6 +429,17 @@
                     </svg>
                 </div>
             </div>
+            <div class="comments-form">
+                <label for="user-comment" class="label-form">Comment</label>
+                <textarea name="user-comment" placeholder="Text input" class="text-area"></textarea>
+            </div>
+            <div class="check-box">
+                <input class="visually-hidden" type="checkbox" value="true" name="user-privacy" id="user-privacy">
+                <label for="user-privacy" class="privacy"><span class="span-privacy"><svg class="privacy-icon" width="10" height="8">
+                    <use href="./images/icons.svg#icon-Checkbox"></use>
+                </svg></span>I accept the terms and conditions of the<a class="policy-file" href="" target="_blank">Privacy Policy</a></label>
+            </div>
+            <button class="form-button" type="submit">Send</button>
         </form>
     </div>
     </div>
