--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
             </div>
             <div class="check-box">
                 <input class="form-input-checked visually-hidden" type="checkbox" value="true" name="user-privacy" id="user-privacy">
-                <label for="user-privacy" class="privacy"><span class="span-privacy"><svg class="privacy-icon" width="10" height="8">
+                <label for="user-privacy" class="privacy"><span class="name"><svg class="privacy-icon" width="10" height="8">
                     <use href="./images/icons.svg#icon-Checkbox"></use>
                 </svg></span>I accept the terms and conditions of the<a class="policy-file" href="" target="_blank">Privacy Policy</a></label>
             </div>
